sdk/cdn/arm-cdn/samples/v10/javascript/README.md
# @azure/arm-cdn client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-cdn in some common scenarios.

| **File Name**                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| --------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [afdCustomDomainsCreateSample.js][afdcustomdomainscreatesample]                                     | creates a new domain within the specified profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [afdCustomDomainsDeleteSample.js][afdcustomdomainsdeletesample]                                     | deletes an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Delete.json                                                                                                                                                                                                                                                       |
| [afdCustomDomainsGetSample.js][afdcustomdomainsgetsample]                                           | gets an existing AzureFrontDoor domain with the specified domain name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Get.json                                                                                                                                                                                                                                                             |
| [afdCustomDomainsListByProfileSample.js][afdcustomdomainslistbyprofilesample]                       | lists existing AzureFrontDoor domains. x-ms-original-file: 2026-07-01/AFDCustomDomains_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                |
| [afdCustomDomainsRefreshValidationTokenSample.js][afdcustomdomainsrefreshvalidationtokensample]     | updates the domain validation token. x-ms-original-file: 2026-07-01/AFDCustomDomains_RefreshValidationToken.json                                                                                                                                                                                                                                                                                                                                         |
| [afdCustomDomainsUpdateSample.js][afdcustomdomainsupdatesample]                                     | updates an existing domain within a profile. x-ms-original-file: 2026-07-01/AFDCustomDomains_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdEndpointsCreateSample.js][afdendpointscreatesample]                                             | creates a new AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Create.json                                                                                                                                                                                                                                                             |
| [afdEndpointsDeleteSample.js][afdendpointsdeletesample]                                             | deletes an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Delete.json                                                                                                                                                                                                                                                       |
| [afdEndpointsGetSample.js][afdendpointsgetsample]                                                   | gets an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/AFDEndpoints_Get.json                                                                                                                                                                                                                                                             |
| [afdEndpointsListByProfileSample.js][afdendpointslistbyprofilesample]                               | lists existing AzureFrontDoor endpoints. x-ms-original-file: 2026-07-01/AFDEndpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdEndpointsListResourceUsageSample.js][afdendpointslistresourceusagesample]                       | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDEndpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                              |
| [afdEndpointsPurgeContentSample.js][afdendpointspurgecontentsample]                                 | removes a content from AzureFrontDoor. x-ms-original-file: 2026-07-01/AFDEndpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                     |
| [afdEndpointsUpdateSample.js][afdendpointsupdatesample]                                             | updates an existing AzureFrontDoor endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update domains, use the Update Custom Domain operation. x-ms-original-file: 2026-07-01/AFDEndpoints_Update.json                   |
| [afdEndpointsValidateCustomDomainSample.js][afdendpointsvalidatecustomdomainsample]                 | validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: 2026-07-01/AFDEndpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                             |
| [afdOriginGroupsCreateSample.js][afdorigingroupscreatesample]                                       | creates a new origin group within the specified profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                      |
| [afdOriginGroupsDeleteSample.js][afdorigingroupsdeletesample]                                       | deletes an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginGroupsGetSample.js][afdorigingroupsgetsample]                                             | gets an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                  |
| [afdOriginGroupsListByProfileSample.js][afdorigingroupslistbyprofilesample]                         | lists all of the existing origin groups within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_ListByProfile.json                                                                                                                                                                                                                                                                                                                              |
| [afdOriginGroupsListResourceUsageSample.js][afdorigingroupslistresourceusagesample]                 | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_ListResourceUsage.json                                                                                                                                                                                                                                                                                           |
| [afdOriginGroupsUpdateSample.js][afdorigingroupsupdatesample]                                       | updates an existing origin group within a profile. x-ms-original-file: 2026-07-01/AFDOriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsCreateSample.js][afdoriginscreatesample]                                                 | creates a new origin within the specified origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Create.json                                                                                                                                                                                                                                                                                                                                            |
| [afdOriginsDeleteSample.js][afdoriginsdeletesample]                                                 | deletes an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Delete.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdOriginsGetSample.js][afdoriginsgetsample]                                                       | gets an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Get.json                                                                                                                                                                                                                                                                                                                                                       |
| [afdOriginsListByOriginGroupSample.js][afdoriginslistbyorigingroupsample]                           | lists all of the existing origins within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_ListByOriginGroup.json                                                                                                                                                                                                                                                                                                                               |
| [afdOriginsUpdateSample.js][afdoriginsupdatesample]                                                 | updates an existing origin within an origin group. x-ms-original-file: 2026-07-01/AFDOrigins_Update.json                                                                                                                                                                                                                                                                                                                                                 |
| [afdProfilesCheckEndpointNameAvailabilitySample.js][afdprofilescheckendpointnameavailabilitysample] | check the availability of an afdx endpoint name, and return the globally unique endpoint host name. x-ms-original-file: 2026-07-01/AFDProfiles_CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                                        |
| [afdProfilesCheckHostNameAvailabilitySample.js][afdprofilescheckhostnameavailabilitysample]         | validates the custom domain mapping to ensure it maps to the correct Azure Front Door endpoint in DNS. x-ms-original-file: 2026-07-01/AFDProfiles_CheckHostNameAvailability.json                                                                                                                                                                                                                                                                         |
| [afdProfilesListResourceUsageSample.js][afdprofileslistresourceusagesample]                         | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/AFDProfiles_ListResourceUsage.json                                                                                                                                                                                                                                                                                               |
| [afdProfilesUpgradeSample.js][afdprofilesupgradesample]                                             | upgrade a profile from Standard_AzureFrontDoor to Premium_AzureFrontDoor. x-ms-original-file: 2026-07-01/AFDProfiles_Upgrade.json                                                                                                                                                                                                                                                                                                                        |
| [afdProfilesValidateSecretSample.js][afdprofilesvalidatesecretsample]                               | validate a Secret in the profile. x-ms-original-file: 2026-07-01/AFDProfiles_ValidateSecret.json                                                                                                                                                                                                                                                                                                                                                         |
| [checkEndpointNameAvailabilitySample.js][checkendpointnameavailabilitysample]                       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a afdx endpoint. x-ms-original-file: 2026-07-01/CheckEndpointNameAvailability.json                                                                                                                                                                                                                                                        |
| [checkNameAvailabilitySample.js][checknameavailabilitysample]                                       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: 2026-07-01/CheckNameAvailability.json                                                                                                                                                                                                                                                                 |
| [checkNameAvailabilityWithSubscriptionSample.js][checknameavailabilitywithsubscriptionsample]       | check the availability of a resource name. This is needed for resources where name is globally unique, such as a CDN endpoint. x-ms-original-file: 2026-07-01/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                 |
| [customDomainsCreateSample.js][customdomainscreatesample]                                           | creates a new custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsDeleteSample.js][customdomainsdeletesample]                                           | deletes an existing custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Delete.json                                                                                                                                                                                                                                                                                                                                           |
| [customDomainsDisableCustomHttpsSample.js][customdomainsdisablecustomhttpssample]                   | disable https delivery of the custom domain. x-ms-original-file: 2026-07-01/CustomDomains_DisableCustomHttps.json                                                                                                                                                                                                                                                                                                                                        |
| [customDomainsEnableCustomHttpsSample.js][customdomainsenablecustomhttpssample]                     | enable https delivery of the custom domain. x-ms-original-file: 2026-07-01/CustomDomains_EnableCustomHttpsUsingBYOC.json                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsGetSample.js][customdomainsgetsample]                                                 | gets an existing custom domain within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_Get.json                                                                                                                                                                                                                                                                                                                                                 |
| [customDomainsListByEndpointSample.js][customdomainslistbyendpointsample]                           | lists all of the existing custom domains within an endpoint. x-ms-original-file: 2026-07-01/CustomDomains_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                            |
| [edgeNodesListSample.js][edgenodeslistsample]                                                       | edgenodes are the global Point of Presence (POP) locations used to deliver CDN content to end users. x-ms-original-file: 2026-07-01/EdgeNodes_List.json                                                                                                                                                                                                                                                                                                  |
| [endpointsCreateSample.js][endpointscreatesample]                                                   | creates a new CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Create.json                                                                                                                                                                                                                                                                           |
| [endpointsDeleteSample.js][endpointsdeletesample]                                                   | deletes an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Delete.json                                                                                                                                                                                                                                                                     |
| [endpointsGetSample.js][endpointsgetsample]                                                         | gets an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/Endpoints_Get.json                                                                                                                                                                                                                                                                           |
| [endpointsListByProfileSample.js][endpointslistbyprofilesample]                                     | lists existing CDN endpoints. x-ms-original-file: 2026-07-01/Endpoints_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                                |
| [endpointsListResourceUsageSample.js][endpointslistresourceusagesample]                             | checks the quota and usage of geo filters and custom domains under the given endpoint. x-ms-original-file: 2026-07-01/Endpoints_ListResourceUsage.json                                                                                                                                                                                                                                                                                                   |
| [endpointsLoadContentSample.js][endpointsloadcontentsample]                                         | pre-loads a content to CDN. Available for Verizon Profiles. x-ms-original-file: 2026-07-01/Endpoints_LoadContent.json                                                                                                                                                                                                                                                                                                                                    |
| [endpointsPurgeContentSample.js][endpointspurgecontentsample]                                       | removes a content from CDN. x-ms-original-file: 2026-07-01/Endpoints_PurgeContent.json                                                                                                                                                                                                                                                                                                                                                                   |
| [endpointsStartSample.js][endpointsstartsample]                                                     | starts an existing CDN endpoint that is on a stopped state. x-ms-original-file: 2026-07-01/Endpoints_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [endpointsStopSample.js][endpointsstopsample]                                                       | stops an existing running CDN endpoint. x-ms-original-file: 2026-07-01/Endpoints_Stop.json                                                                                                                                                                                                                                                                                                                                                               |
| [endpointsUpdateSample.js][endpointsupdatesample]                                                   | updates an existing CDN endpoint with the specified endpoint name under the specified subscription, resource group and profile. Only tags can be updated after creating an endpoint. To update origins, use the Update Origin operation. To update origin groups, use the Update Origin group operation. To update custom domains, use the Update Custom Domain operation. x-ms-original-file: 2026-07-01/Endpoints_Update.json                          |
| [endpointsValidateCustomDomainSample.js][endpointsvalidatecustomdomainsample]                       | validates the custom domain mapping to ensure it maps to the correct CDN endpoint in DNS. x-ms-original-file: 2026-07-01/Endpoints_ValidateCustomDomain.json                                                                                                                                                                                                                                                                                             |
| [logAnalyticsGetLogAnalyticsLocationsSample.js][loganalyticsgetloganalyticslocationssample]         | get all available location names for AFD log analytics report. x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsLocations.json                                                                                                                                                                                                                                                                                                                 |
| [logAnalyticsGetLogAnalyticsMetricsSample.js][loganalyticsgetloganalyticsmetricssample]             | get log report for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                                                   |
| [logAnalyticsGetLogAnalyticsRankingsSample.js][loganalyticsgetloganalyticsrankingssample]           | get log analytics ranking report for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                |
| [logAnalyticsGetLogAnalyticsResourcesSample.js][loganalyticsgetloganalyticsresourcessample]         | get all endpoints and custom domains available for AFD log report x-ms-original-file: 2026-07-01/LogAnalytics_GetLogAnalyticsResources.json                                                                                                                                                                                                                                                                                                              |
| [logAnalyticsGetWafLogAnalyticsMetricsSample.js][loganalyticsgetwafloganalyticsmetricssample]       | get Waf related log analytics report for AFD profile. x-ms-original-file: 2026-07-01/LogAnalytics_GetWafLogAnalyticsMetrics.json                                                                                                                                                                                                                                                                                                                         |
| [logAnalyticsGetWafLogAnalyticsRankingsSample.js][loganalyticsgetwafloganalyticsrankingssample]     | get WAF log analytics charts for AFD profile x-ms-original-file: 2026-07-01/LogAnalytics_GetWafLogAnalyticsRankings.json                                                                                                                                                                                                                                                                                                                                 |
| [managedRuleSetsListSample.js][managedrulesetslistsample]                                           | lists all available managed rule sets. x-ms-original-file: 2026-07-01/WafListManagedRuleSets.json                                                                                                                                                                                                                                                                                                                                                        |
| [operationsListSample.js][operationslistsample]                                                     | list the operations for the provider x-ms-original-file: 2026-07-01/Operations_List.json                                                                                                                                                                                                                                                                                                                                                                 |
| [originGroupsCreateSample.js][origingroupscreatesample]                                             | creates a new origin group within the specified endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Create.json                                                                                                                                                                                                                                                                                                                                        |
| [originGroupsDeleteSample.js][origingroupsdeletesample]                                             | deletes an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Delete.json                                                                                                                                                                                                                                                                                                                                             |
| [originGroupsGetSample.js][origingroupsgetsample]                                                   | gets an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [originGroupsListByEndpointSample.js][origingroupslistbyendpointsample]                             | lists all of the existing origin groups within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                              |
| [originGroupsUpdateSample.js][origingroupsupdatesample]                                             | updates an existing origin group within an endpoint. x-ms-original-file: 2026-07-01/OriginGroups_Update.json                                                                                                                                                                                                                                                                                                                                             |
| [originsCreateSample.js][originscreatesample]                                                       | creates a new origin within the specified endpoint. x-ms-original-file: 2026-07-01/Origins_Create.json                                                                                                                                                                                                                                                                                                                                                   |
| [originsDeleteSample.js][originsdeletesample]                                                       | deletes an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [originsGetSample.js][originsgetsample]                                                             | gets an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Get.json                                                                                                                                                                                                                                                                                                                                                              |
| [originsListByEndpointSample.js][originslistbyendpointsample]                                       | lists all of the existing origins within an endpoint. x-ms-original-file: 2026-07-01/Origins_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                         |
| [originsUpdateSample.js][originsupdatesample]                                                       | updates an existing origin within an endpoint. x-ms-original-file: 2026-07-01/Origins_Update.json                                                                                                                                                                                                                                                                                                                                                        |
| [policiesCreateOrUpdateSample.js][policiescreateorupdatesample]                                     | create or update policy with specified rule set name within a resource group. x-ms-original-file: 2026-07-01/WafPolicyCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [policiesDeleteSample.js][policiesdeletesample]                                                     | deletes Policy x-ms-original-file: 2026-07-01/WafPolicyDelete.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [policiesGetSample.js][policiesgetsample]                                                           | retrieve protection policy with specified name within a resource group. x-ms-original-file: 2026-07-01/WafPolicyGet.json                                                                                                                                                                                                                                                                                                                                 |
| [policiesListSample.js][policieslistsample]                                                         | lists all of the protection policies within a resource group. x-ms-original-file: 2026-07-01/WafListPolicies.json                                                                                                                                                                                                                                                                                                                                        |
| [policiesUpdateSample.js][policiesupdatesample]                                                     | update an existing CdnWebApplicationFirewallPolicy with the specified policy name under the specified subscription and resource group x-ms-original-file: 2026-07-01/WafPatchPolicy.json                                                                                                                                                                                                                                                                 |
| [profilesCanMigrateSample.js][profilescanmigratesample]                                             | checks if CDN profile can be migrated to Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/Profiles_CanMigrate.json                                                                                                                                                                                                                                                                                                              |
| [profilesCdnCanMigrateToAfdSample.js][profilescdncanmigratetoafdsample]                             | checks if CDN profile can be migrated to Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/CdnProfiles_CanMigrate.json                                                                                                                                                                                                                                                                                                           |
| [profilesCdnMigrateToAfdSample.js][profilescdnmigratetoafdsample]                                   | migrate the CDN profile to Azure Frontdoor(Standard/Premium) profile. This step prepares the profile for migration and will be followed by Commit to finalize the migration. x-ms-original-file: 2026-07-01/CdnProfiles_Migrate.json                                                                                                                                                                                                                     |
| [profilesCreateSample.js][profilescreatesample]                                                     | creates a new Azure Front Door Standard or Azure Front Door Premium or CDN profile with a profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Create.json                                                                                                                                                                                                                                          |
| [profilesDeleteSample.js][profilesdeletesample]                                                     | deletes an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified parameters. Deleting a profile will result in the deletion of all of the sub-resources including endpoints, origins and custom domains. x-ms-original-file: 2026-07-01/Profiles_Delete.json                                                                                                                                                  |
| [profilesGenerateSsoUriSample.js][profilesgeneratessourisample]                                     | generates a dynamic SSO URI used to sign in to the CDN supplemental portal. Supplemental portal is used to configure advanced feature capabilities that are not yet available in the Azure portal, such as core reports in a standard profile; rules engine, advanced HTTP reports, and real-time stats and alerts in a premium profile. The SSO URI changes approximately every 10 minutes. x-ms-original-file: 2026-07-01/Profiles_GenerateSsoUri.json |
| [profilesGetSample.js][profilesgetsample]                                                           | gets an Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Get.json                                                                                                                                                                                                                                       |
| [profilesListByResourceGroupSample.js][profileslistbyresourcegroupsample]                           | lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within a resource group. x-ms-original-file: 2026-07-01/Profiles_ListByResourceGroup.json                                                                                                                                                                                                                                                                         |
| [profilesListResourceUsageSample.js][profileslistresourceusagesample]                               | checks the quota and actual usage of endpoints under the given Azure Front Door Standard or Azure Front Door Premium or CDN profile. x-ms-original-file: 2026-07-01/Profiles_ListResourceUsage.json                                                                                                                                                                                                                                                      |
| [profilesListSample.js][profileslistsample]                                                         | lists all of the Azure Front Door Standard, Azure Front Door Premium, and CDN profiles within an Azure subscription. x-ms-original-file: 2026-07-01/Profiles_List.json                                                                                                                                                                                                                                                                                   |
| [profilesListSupportedOptimizationTypesSample.js][profileslistsupportedoptimizationtypessample]     | gets the supported optimization types for the current profile. A user can create an endpoint with an optimization type from the listed values. x-ms-original-file: 2026-07-01/Profiles_ListSupportedOptimizationTypes.json                                                                                                                                                                                                                               |
| [profilesMigrateSample.js][profilesmigratesample]                                                   | migrate the CDN profile to Azure Frontdoor(Standard/Premium) profile. The change need to be committed after this. x-ms-original-file: 2026-07-01/Profiles_Migrate.json                                                                                                                                                                                                                                                                                   |
| [profilesMigrationAbortSample.js][profilesmigrationabortsample]                                     | abort the migration to Azure Frontdoor Premium/Standard. x-ms-original-file: 2026-07-01/Profiles_MigrationAbort.json                                                                                                                                                                                                                                                                                                                                     |
| [profilesMigrationCommitSample.js][profilesmigrationcommitsample]                                   | commit the migrated Azure Frontdoor(Standard/Premium) profile. x-ms-original-file: 2026-07-01/Profiles_MigrationCommit.json                                                                                                                                                                                                                                                                                                                              |
| [profilesUpdateSample.js][profilesupdatesample]                                                     | updates an existing Azure Front Door Standard or Azure Front Door Premium or CDN profile with the specified profile name under the specified subscription and resource group. x-ms-original-file: 2026-07-01/Profiles_Update.json                                                                                                                                                                                                                        |
| [resourceUsageOperationsListSample.js][resourceusageoperationslistsample]                           | check the quota and actual usage of the CDN profiles under the given subscription. x-ms-original-file: 2026-07-01/ResourceUsage_List.json                                                                                                                                                                                                                                                                                                                |
| [routesCreateSample.js][routescreatesample]                                                         | creates a new route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Create.json                                                                                                                                                                                                                                                              |
| [routesDeleteSample.js][routesdeletesample]                                                         | deletes an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Delete.json                                                                                                                                                                                                                                                        |
| [routesGetSample.js][routesgetsample]                                                               | gets an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Get.json                                                                                                                                                                                                                                                              |
| [routesListByEndpointSample.js][routeslistbyendpointsample]                                         | lists all of the existing origins within a profile. x-ms-original-file: 2026-07-01/Routes_ListByEndpoint.json                                                                                                                                                                                                                                                                                                                                            |
| [routesUpdateSample.js][routesupdatesample]                                                         | updates an existing route with the specified route name under the specified subscription, resource group, profile, and AzureFrontDoor endpoint. x-ms-original-file: 2026-07-01/Routes_Update.json                                                                                                                                                                                                                                                        |
| [ruleSetsCreateSample.js][rulesetscreatesample]                                                     | creates or update a batch rule set within the specified profile along with the rules associate to it. x-ms-original-file: 2026-07-01/RuleSets_Create.json                                                                                                                                                                                                                                                                                                |
| [ruleSetsDeleteSample.js][rulesetsdeletesample]                                                     | deletes an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/RuleSets_Delete.json                                                                                                                                                                                                                                                           |
| [ruleSetsGetSample.js][rulesetsgetsample]                                                           | gets an existing AzureFrontDoor rule set with the specified rule set name under the specified subscription, resource group and profile. x-ms-original-file: 2026-07-01/RuleSets_Get.json                                                                                                                                                                                                                                                                 |
| [ruleSetsListByProfileSample.js][rulesetslistbyprofilesample]                                       | lists existing AzureFrontDoor rule sets within a profile. x-ms-original-file: 2026-07-01/RuleSets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [ruleSetsListResourceUsageSample.js][rulesetslistresourceusagesample]                               | checks the quota and actual usage of endpoints under the given Azure Front Door profile. x-ms-original-file: 2026-07-01/RuleSets_ListResourceUsage.json                                                                                                                                                                                                                                                                                                  |
| [rulesCreateSample.js][rulescreatesample]                                                           | creates a new delivery rule within the specified rule set. x-ms-original-file: 2026-07-01/Rules_Create.json                                                                                                                                                                                                                                                                                                                                              |
| [rulesDeleteSample.js][rulesdeletesample]                                                           | deletes an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [rulesGetSample.js][rulesgetsample]                                                                 | gets an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [rulesListByRuleSetSample.js][ruleslistbyrulesetsample]                                             | lists all of the existing delivery rules within a rule set. x-ms-original-file: 2026-07-01/Rules_ListByRuleSet.json                                                                                                                                                                                                                                                                                                                                      |
| [rulesUpdateSample.js][rulesupdatesample]                                                           | updates an existing delivery rule within a rule set. x-ms-original-file: 2026-07-01/Rules_Update.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsCreateSample.js][secretscreatesample]                                                       | creates a new Secret within the specified profile. x-ms-original-file: 2026-07-01/Secrets_Create.json                                                                                                                                                                                                                                                                                                                                                    |
| [secretsDeleteSample.js][secretsdeletesample]                                                       | deletes an existing Secret within profile. x-ms-original-file: 2026-07-01/Secrets_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [secretsGetSample.js][secretsgetsample]                                                             | gets an existing Secret within a profile. x-ms-original-file: 2026-07-01/Secrets_Get.json                                                                                                                                                                                                                                                                                                                                                                |
| [secretsListByProfileSample.js][secretslistbyprofilesample]                                         | lists existing AzureFrontDoor secrets. x-ms-original-file: 2026-07-01/Secrets_ListByProfile.json                                                                                                                                                                                                                                                                                                                                                         |
| [securityPoliciesCreateSample.js][securitypoliciescreatesample]                                     | creates a new security policy within the specified profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Create.json                                                                                                                                                                                                                                                                                                                                  |
| [securityPoliciesDeleteSample.js][securitypoliciesdeletesample]                                     | deletes an existing security policy within profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Delete.json                                                                                                                                                                                                                                                                                                                                          |
| [securityPoliciesGetSample.js][securitypoliciesgetsample]                                           | gets an existing security policy within a profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [securityPoliciesListByProfileSample.js][securitypolicieslistbyprofilesample]                       | lists security policies associated with the profile x-ms-original-file: 2026-07-01/SecurityPolicies_ListByProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [securityPoliciesPatchSample.js][securitypoliciespatchsample]                                       | updates an existing security policy within a profile. x-ms-original-file: 2026-07-01/SecurityPolicies_Patch.json                                                                                                                                                                                                                                                                                                                                         |
| [validateProbeSample.js][validateprobesample]                                                       | check if the probe path is a valid path and the file can be accessed. Probe path is the path to a file hosted on the origin server to help accelerate the delivery of dynamic content via the CDN endpoint. This path is relative to the origin path specified in the endpoint configuration. x-ms-original-file: 2026-07-01/ValidateProbe.json                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node afdCustomDomainsCreateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node afdCustomDomainsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[afdcustomdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsCreateSample.js
[afdcustomdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsDeleteSample.js
[afdcustomdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsGetSample.js
[afdcustomdomainslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsListByProfileSample.js
[afdcustomdomainsrefreshvalidationtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsRefreshValidationTokenSample.js
[afdcustomdomainsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdCustomDomainsUpdateSample.js
[afdendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsCreateSample.js
[afdendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsDeleteSample.js
[afdendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsGetSample.js
[afdendpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsListByProfileSample.js
[afdendpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsListResourceUsageSample.js
[afdendpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsPurgeContentSample.js
[afdendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsUpdateSample.js
[afdendpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdEndpointsValidateCustomDomainSample.js
[afdorigingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsCreateSample.js
[afdorigingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsDeleteSample.js
[afdorigingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsGetSample.js
[afdorigingroupslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsListByProfileSample.js
[afdorigingroupslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsListResourceUsageSample.js
[afdorigingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginGroupsUpdateSample.js
[afdoriginscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginsCreateSample.js
[afdoriginsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginsDeleteSample.js
[afdoriginsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginsGetSample.js
[afdoriginslistbyorigingroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginsListByOriginGroupSample.js
[afdoriginsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdOriginsUpdateSample.js
[afdprofilescheckendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdProfilesCheckEndpointNameAvailabilitySample.js
[afdprofilescheckhostnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdProfilesCheckHostNameAvailabilitySample.js
[afdprofileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdProfilesListResourceUsageSample.js
[afdprofilesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdProfilesUpgradeSample.js
[afdprofilesvalidatesecretsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/afdProfilesValidateSecretSample.js
[checkendpointnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/checkEndpointNameAvailabilitySample.js
[checknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/checkNameAvailabilitySample.js
[checknameavailabilitywithsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/checkNameAvailabilityWithSubscriptionSample.js
[customdomainscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsCreateSample.js
[customdomainsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsDeleteSample.js
[customdomainsdisablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsDisableCustomHttpsSample.js
[customdomainsenablecustomhttpssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsEnableCustomHttpsSample.js
[customdomainsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsGetSample.js
[customdomainslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/customDomainsListByEndpointSample.js
[edgenodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/edgeNodesListSample.js
[endpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsCreateSample.js
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsDeleteSample.js
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsGetSample.js
[endpointslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsListByProfileSample.js
[endpointslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsListResourceUsageSample.js
[endpointsloadcontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsLoadContentSample.js
[endpointspurgecontentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsPurgeContentSample.js
[endpointsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsStartSample.js
[endpointsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsStopSample.js
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsUpdateSample.js
[endpointsvalidatecustomdomainsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/endpointsValidateCustomDomainSample.js
[loganalyticsgetloganalyticslocationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetLogAnalyticsLocationsSample.js
[loganalyticsgetloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetLogAnalyticsMetricsSample.js
[loganalyticsgetloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetLogAnalyticsRankingsSample.js
[loganalyticsgetloganalyticsresourcessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetLogAnalyticsResourcesSample.js
[loganalyticsgetwafloganalyticsmetricssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetWafLogAnalyticsMetricsSample.js
[loganalyticsgetwafloganalyticsrankingssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/logAnalyticsGetWafLogAnalyticsRankingsSample.js
[managedrulesetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/managedRuleSetsListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/operationsListSample.js
[origingroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originGroupsCreateSample.js
[origingroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originGroupsDeleteSample.js
[origingroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originGroupsGetSample.js
[origingroupslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originGroupsListByEndpointSample.js
[origingroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originGroupsUpdateSample.js
[originscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originsCreateSample.js
[originsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originsDeleteSample.js
[originsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originsGetSample.js
[originslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originsListByEndpointSample.js
[originsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/originsUpdateSample.js
[policiescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/policiesCreateOrUpdateSample.js
[policiesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/policiesDeleteSample.js
[policiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/policiesGetSample.js
[policieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/policiesListSample.js
[policiesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/policiesUpdateSample.js
[profilescanmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesCanMigrateSample.js
[profilescdncanmigratetoafdsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesCdnCanMigrateToAfdSample.js
[profilescdnmigratetoafdsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesCdnMigrateToAfdSample.js
[profilescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesCreateSample.js
[profilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesDeleteSample.js
[profilesgeneratessourisample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesGenerateSsoUriSample.js
[profilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesGetSample.js
[profileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesListByResourceGroupSample.js
[profileslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesListResourceUsageSample.js
[profileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesListSample.js
[profileslistsupportedoptimizationtypessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesListSupportedOptimizationTypesSample.js
[profilesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesMigrateSample.js
[profilesmigrationabortsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesMigrationAbortSample.js
[profilesmigrationcommitsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesMigrationCommitSample.js
[profilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/profilesUpdateSample.js
[resourceusageoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/resourceUsageOperationsListSample.js
[routescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/routesCreateSample.js
[routesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/routesDeleteSample.js
[routesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/routesGetSample.js
[routeslistbyendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/routesListByEndpointSample.js
[routesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/routesUpdateSample.js
[rulesetscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/ruleSetsCreateSample.js
[rulesetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/ruleSetsDeleteSample.js
[rulesetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/ruleSetsGetSample.js
[rulesetslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/ruleSetsListByProfileSample.js
[rulesetslistresourceusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/ruleSetsListResourceUsageSample.js
[rulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/rulesCreateSample.js
[rulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/rulesDeleteSample.js
[rulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/rulesGetSample.js
[ruleslistbyrulesetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/rulesListByRuleSetSample.js
[rulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/rulesUpdateSample.js
[secretscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/secretsCreateSample.js
[secretsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/secretsDeleteSample.js
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/secretsGetSample.js
[secretslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/secretsListByProfileSample.js
[securitypoliciescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/securityPoliciesCreateSample.js
[securitypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/securityPoliciesDeleteSample.js
[securitypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/securityPoliciesGetSample.js
[securitypolicieslistbyprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/securityPoliciesListByProfileSample.js
[securitypoliciespatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/securityPoliciesPatchSample.js
[validateprobesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cdn/arm-cdn/samples/v10/javascript/validateProbeSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-cdn
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cdn/arm-cdn/README.md
